[package]
name = "otssh"
version = "0.1.0"
authors = ["Andreas Grub <andreas.grub@qaware.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrussh = "0.32.5"
thrussh-keys = "0.20.2"
futures = "0.3.12"
tokio = "1.1.0"
anyhow = "1.0.26"
libc = "0.2"
nix = "0.19.1"